// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App generic tests When app is is unmounted 1`] = `
<div
  className="sc-cTkwdZ hzEKpk"
>
  <div
    className="sc-bZSQDF bYUhCn"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm0 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm1 5a1 1 0 00-1 1 1 1 0 001 1h18a1 1 0 001-1 1 1 0 00-1-1H3z"
      />
    </svg>
  </div>
  <div
    className="sc-iUuytg fLDHOp"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="sc-hiSbYr fYVumk sc-iBaPrD sOjxB"
  >
    <div
      className="sc-gWHgXt erOPBk"
    >
      <div
        className="sc-jcVebW gvYcCv"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="sc-citwmv iOMzRU"
      >
        <div
          className="sc-gsTCUz eTRikO"
        >
          <input
            autoComplete="off"
            className="sc-dlfnbm hWZHBM"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search component name"
            type="search"
            value=""
          />
          <div
            className="sc-hKgILt kZvQyL"
          >
            <div
              className="sc-bdfBwQ bHoZMY"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-cBNfnY ddxHA-D"
    >
      <nav
        className="sc-pFZIQ jpJWqU"
      >
        <div
          className="sc-jrAGrp eoKdvK"
        >
          <div
            className="sc-eCssSg dGaJds"
          >
            <div
              className="sc-jSgupP jooZFA"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="sc-gKsewC XLBKx"
            />
          </div>
        </div>
        <div
          className="sc-jrAGrp eoKdvK"
        >
          <div
            className="sc-eCssSg dGaJds"
          >
            <div
              className="sc-jSgupP jooZFA"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="sc-gKsewC XLBKx"
            />
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="sc-eggNIi cnMrlT"
  >
    <article
      className="sc-fKFyDc cNrfnb"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="sc-bBXqnf yFNHO"
        >
          Welcome!
        </h1>
        <div
          className="sc-iwyYcG eiFfWJ"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App generic tests When app is open 1`] = `
<div
  className="sc-cTkwdZ hzEKpk"
>
  <div
    className="sc-bZSQDF bYUhCn"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm0 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm1 5a1 1 0 00-1 1 1 1 0 001 1h18a1 1 0 001-1 1 1 0 00-1-1H3z"
      />
    </svg>
  </div>
  <div
    className="sc-iUuytg fLDHOp"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="sc-hiSbYr fYVumk sc-iBaPrD sOjxB"
  >
    <div
      className="sc-gWHgXt erOPBk"
    >
      <div
        className="sc-jcVebW gvYcCv"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="sc-citwmv iOMzRU"
      >
        <div
          className="sc-gsTCUz eTRikO"
        >
          <input
            autoComplete="off"
            className="sc-dlfnbm hWZHBM"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search component name"
            type="search"
            value=""
          />
          <div
            className="sc-hKgILt kZvQyL"
          >
            <div
              className="sc-bdfBwQ bHoZMY"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-cBNfnY ddxHA-D"
    >
      <nav
        className="sc-pFZIQ jpJWqU"
      >
        <div
          className="sc-jrAGrp eoKdvK"
        >
          <div
            className="sc-eCssSg dGaJds"
          >
            <div
              className="sc-jSgupP jooZFA"
              onClick={[Function]}
            >
              Structure
            </div>
            <div
              className="sc-gKsewC XLBKx"
            />
          </div>
        </div>
        <div
          className="sc-jrAGrp eoKdvK"
        >
          <div
            className="sc-eCssSg dGaJds"
          >
            <div
              className="sc-jSgupP jooZFA"
              onClick={[Function]}
            >
              Components
            </div>
            <div
              className="sc-gKsewC XLBKx"
            />
          </div>
        </div>
      </nav>
    </div>
  </aside>
  <main
    className="sc-eggNIi cnMrlT"
  >
    <article
      className="sc-fKFyDc cNrfnb"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="sc-bBXqnf yFNHO"
        >
          Welcome!
        </h1>
        <div
          className="sc-iwyYcG eiFfWJ"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;

exports[`App generic tests When app receive no sections 1`] = `
<div
  className="sc-cTkwdZ hzEKpk"
>
  <div
    className="sc-bZSQDF bYUhCn"
    onClick={[Function]}
  >
    <svg
      id="open"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm0 6a1 1 0 011-1h18a1 1 0 011 1 1 1 0 01-1 1H3a1 1 0 01-1-1zm1 5a1 1 0 00-1 1 1 1 0 001 1h18a1 1 0 001-1 1 1 0 00-1-1H3z"
      />
    </svg>
  </div>
  <div
    className="sc-iUuytg fLDHOp"
    onClick={[Function]}
  >
    <svg
      id="close"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.23 4.81A1 1 0 004.8 6.23L10.6 12 4.8 17.77a1 1 0 101.42 1.42L12 13.4l5.78 5.78a1 1 0 001.4-1.42L13.42 12l5.78-5.77a1 1 0 10-1.41-1.42L12 10.6 6.23 4.8z"
      />
    </svg>
  </div>
  <aside
    className="sc-hiSbYr fYVumk sc-iBaPrD sOjxB"
  >
    <div
      className="sc-gWHgXt erOPBk"
    >
      <div
        className="sc-jcVebW gvYcCv"
      >
        <svg
          viewBox="0 0 44 44"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#7000E3"
            height="44"
            rx="3.9"
            width="44"
          />
          <path
            d="M28 11.3c-2.3 0-4.6 1-6 3-1.4-2-3.7-3-6-3-4.3 0-7.8 3.3-7.8 7.6 0 6.5 9.3 15 13.8 15s13.8-8.5 13.8-15c0-4.4-3.5-7.7-7.8-7.7"
            fill="#FF671B"
          />
        </svg>
      </div>
      <div
        className="sc-citwmv iOMzRU"
      >
        <div
          className="sc-gsTCUz eTRikO"
        >
          <input
            autoComplete="off"
            className="sc-dlfnbm hWZHBM"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="Search component name"
            type="search"
            value="s"
          />
          <div
            className="sc-hKgILt kZvQyL"
          >
            <div
              className="sc-bdfBwQ bHoZMY"
              role="presentation"
              size={0}
            >
              <svg
                viewBox="0 0 32 32"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20.5 20.92l7.62 7.67-1.43 1.4-7.72-7.79A10.83 10.83 0 0 1 2 13.28v-.45a10.84 10.84 0 0 1 21.67 0v.45c0 2.98-1.21 5.68-3.16 7.64zM4 12.82v.46a8.83 8.83 0 0 0 17.67 0v-.45a8.83 8.83 0 0 0-17.67 0z"
                  fillRule="evenodd"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-cBNfnY ddxHA-D"
    >
      <nav
        className="sc-pFZIQ jpJWqU"
      />
    </div>
  </aside>
  <main
    className="sc-eggNIi cnMrlT"
  >
    <article
      className="sc-fKFyDc cNrfnb"
      data-id="welcome!"
    >
      <header
        className="styleguide-component__header"
      >
        <h1
          className="sc-bBXqnf yFNHO"
        >
          Welcome!
        </h1>
        <div
          className="sc-iwyYcG eiFfWJ"
        >
          Style guide is a tool to illustrate, sandbox and test your components.
        </div>
      </header>
    </article>
  </main>
</div>
`;
